  * Support for some new X key symbols (some of them spelling errors).
  * Debconf support for grp:alt_caps_toggle, grp:lctrl_lshift_toggle,
    grp:sclk_toggle, lv3:alt_switch, lv3:enter_switch, compose:lwin
  * Removed debconf support for grp:alts_toggle, grp:ctrls_toggle,
    grp:shifts_toggle, grp:shift_caps_toggle as it is impossible to
    support them on the console.

 -- Anton Zinoviev <zinoviev@debian.org>  Sun, 08 Jun 2008 20:18:47 +0300

console-setup (1.23) unstable; urgency=low

  [ Petter Reinholdtsen ]
  * Correct dependency info in init.d scripts to make sure they start
    after console-screen and keymap. Closes: #475826.

  [ Colin Watson ]
  * Map dead_stroke to U+002D HYPHEN-MINUS.
  * Support XKB rules with multiple consequents (thanks, Adam Simpkins;
    LP: #139710).
  * Allow specifying alternate rules using XKBRULES (thanks, Adam Simpkins;
    LP: #139712).
  * Handle some special cases for the KPDL key (LP: #189529).

  [ Debconf template translations ]
  * Galician. Closes: #480983.
  * German. Closes: #475045.
  * Portuguese. Closes: #478347.

 -- Christian Perrier <bubulle@debian.org>  Sun, 01 Jun 2008 18:40:29 +0200

console-setup (1.22) unstable; urgency=low

  [ Colin Watson ]
  * Proofread and correct debconf templates (LP: #181860).
  * Treat 'any' as a synonym for 'NoSymbol' in XKB input files (LP: #93077).

  [ Piarres Beobide ]
  * Debconf Basque translation. Closes: #469650

  [ Frans Pop ]
  * Add support for PA Semi's evaluation systems (#464429). Thanks to
    Olof Johansson for the patch.

  [ Anton Zinoviev ]
  * Use boottime.kmap.gz instead of ckbcomp in setupcon only if the
    default configuration is requested and boottime.kmap.gz is not older
    than /etc/default/console-setup.  The package has used
    boottime.kmap.gz since version 1.20.  This closes: #473217.
  * ckbcomp: define X key codes 214-217 for AT keyboards (multimedia,
    hence fake keys).  Thanks to Michael Biebl, Christoph Anton Mitterer