@@ -10,20 +10,25 @@ package KeyboardNames;
     'Acer AirKey V' => 'airkey',
     'Acer C300' => 'acer_c300',
     'Acer Ferrari 4000' => 'acer_ferrari4k',
-    'Acer TravelMate 800' => 'acer_tm_800',
+    'Acer Laptop' => 'acer_laptop',
     'Advance Scorpius KI' => 'scorpius',
     'Amiga' => 'amiga',
     'Apple' => 'apple',
     'Apple Laptop' => 'apple_laptop',
+    'Asus Laptop' => 'asus_laptop',
     'Atari TT' => 'ataritt',
     'Azona RF2300 wireless Internet Keyboard' => 'azonaRF2300',
     'BTC 5090' => 'btc5090',
     'BTC 5113RF Multimedia' => 'btc5113rf',
     'BTC 5126T' => 'btc5126t',
+    'BTC 6301URF' => 'btc6301urf',
     'BTC 9000' => 'btc9000',
     'BTC 9000A' => 'btc9000a',
     'BTC 9001AH' => 'btc9001ah',
     'BTC 9019U' => 'btc9019u',
+    'BenQ X-Touch' => 'benqx',
+    'BenQ X-Touch 730' => 'benqx730',
+    'BenQ X-Touch 800' => 'benqx800',
     'Brazilian ABNT2' => 'abnt2',
     'Brother Internet Keyboard' => 'brother',
     'Cherry Blue Line CyBo@rd' => 'cherryblue',
@@ -33,6 +38,8 @@ package KeyboardNames;
     'Cherry CyMotion Master XPress' => 'cherryblueb',
     'Chicony Internet Keyboard' => 'chicony',
     'Chicony KB-9885' => 'chicony9885',
+    'Chicony KU-0108' => 'chicony0108',
+    'Classmate PC' => 'classmate',
     'Compaq Easy Access Keyboard' => 'compaqeak8',
     'Compaq Internet Keyboard (13 keys)' => 'compaqik13',
     'Compaq Internet Keyboard (18 keys)' => 'compaqik18',
@@ -41,13 +48,19 @@ package KeyboardNames;
     'DTK2000' => 'dtk2000',
     'Dell' => 'dell',
     'Dell 101-key PC' => 'dell101',
+    'Dell Laptop/notebook Inspiron 6xxx/8xxx' => 'inspiron',
+    'Dell Laptop/notebook Precision M series' => 'precision_m',
     'Dell Latitude series laptop' => 'latitude',
+    'Dell Precision M65' => 'dellm65',
+    'Dell SK-8125' => 'dellsk8125',
+    'Dell SK-8135' => 'dellsk8135',
     'Dell USB Multimedia Keybard' => 'dellusbmm',
     'Dexxa Wireless Desktop Keyboard' => 'dexxa',
     'Diamond 9801 / 9802 series' => 'diamond',
     'Ennyah DKB-1008' => 'ennyah_dkb1008',
     'Evdev-managed keyboard' => 'evdev',
     'Everex STEPnote' => 'everex',
+    'Fujitsu-Siemens Computers AMILO A1667G laptop' => 'fscaa1667g',
     'Generic 101-key PC' => 'pc101',
     'Generic 102-key (Intl) PC' => 'pc102',
     'Generic 104-key PC' => 'pc104',
@@ -57,7 +70,11 @@ package KeyboardNames;
     'Genius Comfy KB-21e-Scroll' => 'geniuscomfy2',
     'Genius KB-19e NB' => 'geniuskb19e',
     'Gyration' => 'gyration',
+    'Happy Hacking Keyboard' => 'hhk',
+    'Happy Hacking Keyboard for Mac' => 'macintosh_hhk',
     'Hewlett-Packard Internet Keyboard' => 'hpi6',
+    'Hewlett-Packard Internet Keyboard 5181' => 'hp5181',
+    'Hewlett-Packard Internet Keyboard 5185' => 'hp5185',
     'Hewlett-Packard Omnibook 500 FA' => 'hp500fa',
     'Hewlett-Packard Omnibook 5xx' => 'hp5xx',
     'Hewlett-Packard Omnibook 6000/6100' => 'hp6000',
@@ -67,33 +84,40 @@ package KeyboardNames;
     'Hewlett-Packard Pavilion ZT11xx' => 'hpzt11xx',
     'Hewlett-Packard SK-2501 Multimedia Keyboard' => 'hp2501',
     'Hewlett-Packard SK-2505 Internet Keyboard' => 'hp2505',
+    'Hewlett-Packard nx9020' => 'hpnx9020',
     'Honeywell Euroboard' => 'honeywell_euroboard',
     'IBM Rapid Access' => 'rapidaccess',
     'IBM Rapid Access II' => 'rapidaccess2',
     'IBM Rapid Access II (alternate option)' => 'rapidaccess2a',
     'IBM ThinkPad 560Z/600/600E/A22E' => 'thinkpad',
     'IBM ThinkPad 560Z/600/600E/A22E, Intl' => 'thinkpadintl',
+    'IBM ThinkPad R60/T60/Z60m/Z60t/R61/T61/Z61m/Z61t' => 'thinkpad60',
     'Japanese 106-key' => 'jp106',
     'Keytronic FlexPro' => 'flexpro',
     'Korean 106-key' => 'kr106',
     'Laptop/notebook Compaq (eg. Armada) Laptop Keyboard' => 'armada',
     'Laptop/notebook Compaq (eg. Presario) Internet Keyboard' => 'presario',
-    'Laptop/notebook Dell Inspiron 6xxx/8xxx' => 'inspiron',
     'Laptop/notebook eMachines m68xx' => 'emachines',
     'Logitech Access Keyboard' => 'logiaccess',
-    'Logitech Cordless Desktop' => 'ltcd',
+    'Logitech Cordless Desktop' => 'logicd',
+    'Logitech Cordless Desktop (alternate option)' => 'logicda',
+    'Logitech Cordless Desktop EX110' => 'logiex110',
     'Logitech Cordless Desktop LX-300' => 'logiclx300',
     'Logitech Cordless Desktop Navigator' => 'logicdn',
-    'Logitech Cordless Desktop Optical' => 'logicdo',
-    'Logitech Cordless Desktop Pro' => 'logicdp',
-    'Logitech Cordless Desktop Pro (alternate option)' => 'logicdpa',
+    'Logitech Cordless Desktop Optical' => 'logicd_opt',
     'Logitech Cordless Desktop Pro (alternate option2)' => 'logicdpa2',
-    'Logitech Cordless Desktop iTouch' => 'logicdit',
+    'Logitech Cordless Desktop iTouch' => 'logicd_it',
     'Logitech Cordless Freedom/Desktop Navigator' => 'logicfn',
+    'Logitech G15 extra keys via G15daemon' => 'logitech_g15',
+    'Logitech Generic Keyboard' => 'logitech_base',
+    'Logitech Internet 350 Keyboard' => 'logii350',
     'Logitech Internet Keyboard' => 'logiik',
     'Logitech Internet Navigator Keyboard' => 'logicink',
+    'Logitech Media Elite Keyboard' => 'logimel',
+    'Logitech Ultra-X Cordless Media Desktop Keyboard' => 'logiultraxc',
     'Logitech Ultra-X Keyboard' => 'logiultrax',
-    'Logitech diNovo Keyboard' => 'dinovo',
+    'Logitech diNovo Edge Keyboard' => 'logidinovoedge',
+    'Logitech diNovo Keyboard' => 'logidinovo',
     'Logitech iTouch' => 'itouch',
     'Logitech iTouch Cordless Keyboard (model Y-RB6)' => 'logiitc',
     'Logitech iTouch Internet Navigator Keyboard SE' => 'logiinkse',
@@ -108,15 +132,16 @@ package KeyboardNames;
     'Microsoft Internet Keyboard' => 'microsoftinet',
     'Microsoft Internet Keyboard Pro, Swedish' => 'microsoftprose',
     'Microsoft Natural' => 'microsoft',
+    'Microsoft Natural Keyboard Elite' => 'microsoftelite',
     'Microsoft Natural Keyboard Pro / Microsoft Internet Keyboard Pro' => 'microsoftpro',
     'Microsoft Natural Keyboard Pro OEM' => 'microsoftprooem',
     'Microsoft Natural Keyboard Pro USB / Microsoft Internet Keyboard Pro' => 'microsoftprousb',
     'Microsoft Office Keyboard' => 'microsoftoffice',
     'Microsoft Wireless Multimedia Keyboard 1.0A' => 'microsoftmult',
     'Northgate OmniKey 101' => 'omnikey101',
-    'Oretec MCK-800 MM/Internet keyboard' => 'oretec',
+    'OLPC' => 'olpc',
+    'Ortek MCK-800 MM/Internet keyboard' => 'oretec',
     'PC-98xx Series' => 'pc98',
-    'PowerPC PS/2' => 'powerpcps2',
     'Propeller Voyager (KTEZ-1000)' => 'propeller',
     'QTronix Scorpius 98N+' => 'qtronix',
     'SILVERCREST Multimedia Wireless Keyboard' => 'silvercrest',
@@ -129,11 +154,13 @@ package KeyboardNames;
     'Samsung SDM 4510P' => 'samsung4510',
     'Sun Type 4' => 'sun4',
     'Sun Type 5' => 'sun5',
+    'Sun Type 5/6' => 'sun6',
     'Super Power Multimedia Keyboard' => 'sp_inet',
     'Symplon PaceBook (tablet PC)' => 'symplon',
     'Toshiba Satellite S3000' => 'toshiba_s3000',
     'Trust Direct Access Keyboard' => 'trustda',
     'Trust Wireless Keyboard Classic' => 'trust',
+    'ViewSonic KU-306 Internet Keyboard' => 'vsonku306',
     'Winbook Model XP5' => 'winbook',
     'Yahoo! Internet Keyboard' => 'yahoo',
 );
@@ -150,16 +177,19 @@ package KeyboardNames;
     'Belgium' => 'be',
     'Bhutan' => 'bt',
     'Bosnia and Herzegovina' => 'ba',
+    'Braille' => 'braille',
     'Brazil' => 'br',
     'Bulgaria' => 'bg',
     'Cambodia' => 'kh',
     'Canada' => 'ca',
+    'China' => 'cn',
     'Congo, Democratic Republic of the' => 'cd',
     'Croatia' => 'hr',
     'Czechia' => 'cz',
     'Denmark' => 'dk',
     'Esperanto' => 'epo',
     'Estonia' => 'ee',
+    'Ethiopia' => 'et',
     'Faroe Islands' => 'fo',
     'Finland' => 'fi',
     'France' => 'fr',
@@ -167,6 +197,7 @@ package KeyboardNames;
     'Germany' => 'de',
     'Ghana' => 'gh',
     'Greece' => 'gr',
+    'Guinea' => 'gn',
     'Hungary' => 'hu',
     'Iceland' => 'is',
     'India' => 'in',
@@ -189,6 +220,8 @@ package KeyboardNames;
     'Malta' => 'mt',
     'Maori' => 'mao',
     'Mongolia' => 'mn',
+    'Montenegro' => 'me',
+    'Morocco' => 'ma',
     'Myanmar' => 'mm',
     'Nepal' => 'np',
     'Netherlands' => 'nl',
@@ -199,7 +232,7 @@ package KeyboardNames;
     'Portugal' => 'pt',
     'Romania' => 'ro',
     'Russia' => 'ru',
-    'Serbia and Montenegro' => 'cs',
+    'Serbia' => 'rs',
     'Slovakia' => 'sk',
     'Slovenia' => 'si',
     'South Africa' => 'za',
@@ -211,7 +244,7 @@ package KeyboardNames;
     'Tajikistan' => 'tj',
     'Thailand' => 'th',
     'Turkey' => 'tr',
-    'U.S. English' => 'us',
+    'USA' => 'us',
     'Ukraine' => 'ua',
     'United Kingdom' => 'gb',
     'Uzbekistan' => 'uz',
@@ -220,11 +253,15 @@ package KeyboardNames;
 
 %variants = (
     'af' => {
+	'OLPC Dari' => 'olpc-fa',
+	'OLPC Pashto' => 'olpc-ps',
+	'OLPC Southern Uzbek' => 'olpc-uz',
 	'Pashto' => 'ps',
 	'Southern Uzbek' => 'uz',
     },
     'am' => {
 	'Alternative Eastern' => 'eastern-alt',
+	'Alternative Phonetic' => 'phonetic-alt',
 	'Eastern' => 'eastern',
 	'Phonetic' => 'phonetic',
 	'Western' => 'western',
@@ -259,7 +296,16 @@ package KeyboardNames;
 	'Phonetic' => 'phonetic',
     },
     'br' => {
+	'Dvorak' => 'dvorak',
 	'Eliminate dead keys' => 'nodeadkeys',
+	'Nativo' => 'nativo',
+	'Nativo for Esperanto' => 'nativo-epo',
+	'Nativo for USA keyboards' => 'nativo-us',
+	'Thinkpad' => 'thinkpad',
+    },
+    'braille' => {
+	'Left hand' => 'left_hand',
+	'Right hand' => 'right_hand',
     },
     'by' => {
 	'Latin' => 'latin',
@@ -272,6 +318,7 @@ package KeyboardNames;
 	'Multilingual' => 'multix',
 	'Multilingual, first part' => 'multi',
 	'Multilingual, second part' => 'multi-2gr',
+	'Secwepemctsin' => 'shs',
     },
     'ch' => {
 	'French' => 'fr',
@@ -282,14 +329,9 @@ package KeyboardNames;
 	'German, Sun dead keys' => 'de_sundeadkeys',
 	'German, eliminate dead keys' => 'de_nodeadkeys',
     },
-    'cs' => {
-	'Latin' => 'latin',
-	'Latin Unicode' => 'latinunicode',
-	'Latin Unicode qwerty' => 'latinunicodeyz',
-	'Latin qwerty' => 'latinyz',
-	'Latin with guillemets' => 'latinalternatequotes',
-	'With guillemets' => 'alternatequotes',
-	'Z and ZHE swapped' => 'yz',
+    'cn' => {
+	'Tibetan' => 'tib',
+	'Tibetan (with ASCII numerals)' => 'tib_asciinum',
     },
     'cz' => {
 	'With <\|> key' => 'bksl',
@@ -309,6 +351,7 @@ package KeyboardNames;
 	'Sun dead keys' => 'sundeadkeys',
     },
     'dk' => {
+	'Dvorak' => 'dvorak',
 	'Eliminate dead keys' => 'nodeadkeys',
 	'Macintosh' => 'mac',
 	'Macintosh, eliminate dead keys' => 'mac_nodeadkeys',
@@ -316,8 +359,13 @@ package KeyboardNames;
     'ee' => {
 	'Dvorak' => 'dvorak',
 	'Eliminate dead keys' => 'nodeadkeys',
+	'US keyboard with Estonian letters' => 'us',
+    },
+    'epo' => {
+	'displaced semicolon and quote (obsolete)' => 'legacy',
     },
     'es' => {
+	'Asturian variant with bottom-dot H and bottom-dot L' => 'ast',
 	'Catalan variant with middle-dot L' => 'cat',
 	'Dvorak' => 'dvorak',
 	'Eliminate dead keys' => 'nodeadkeys',
@@ -325,8 +373,8 @@ package KeyboardNames;
 	'Sun dead keys' => 'sundeadkeys',
     },
     'fi' => {
+	'Classic' => 'classic',
 	'Eliminate dead keys' => 'nodeadkeys',
-	'Kotoistus' => 'kotoistus',
 	'Macintosh' => 'mac',
 	'Northern Saami' => 'smi',
     },
@@ -337,12 +385,15 @@ package KeyboardNames;
 	'(Legacy) Alternative' => 'latin9',
 	'(Legacy) Alternative, Sun dead keys' => 'latin9_sundeadkeys',
 	'(Legacy) Alternative, eliminate dead keys' => 'latin9_nodeadkeys',
+	'(Legacy) Dvorak' => 'dvorak',
 	'Alternative' => 'oss',
 	'Alternative, Sun dead keys' => 'oss_sundeadkeys',
 	'Alternative, eliminate dead keys' => 'oss_nodeadkeys',
 	'Alternative, latin-9 only' => 'oss_latin9',
-	'Dvorak' => 'dvorak',
+	'Bepo, ergonomic, Dvorak way' => 'bepo',
+	'Bepo, ergonomic, Dvorak way, latin-9 only' => 'bepo_latin9',
 	'Eliminate dead keys' => 'nodeadkeys',
+	'Georgian AZERTY Tskapo' => 'geo',
 	'Macintosh' => 'mac',
 	'Sun dead keys' => 'sundeadkeys',
     },
@@ -352,6 +403,9 @@ package KeyboardNames;
 	'Macintosh' => 'mac',
     },
     'ge' => {
+	'Ergonomic' => 'ergonomic',
+	'MESS' => 'mess',
+	'Ossetian' => 'os',
 	'Russian' => 'ru',
     },
     'gh' => {
@@ -401,6 +455,7 @@ package KeyboardNames;
 	'UnicodeExpert' => 'UnicodeExpert',
     },
     'il' => {
+	'Biblical Hebrew (Tiro)' => 'biblical',
 	'Phonetic' => 'phonetic',
 	'lyx' => 'lyx',
     },
@@ -409,8 +464,11 @@ package KeyboardNames;
 	'Bengali Probhat' => 'ben_probhat',
 	'Gujarati' => 'guj',
 	'Gurmukhi' => 'guru',
+	'Gurmukhi Jhelum' => 'jhelum',
+	'Hindi Bolnagri' => 'bolnagri',
 	'Kannada' => 'kan',
 	'Malayalam' => 'mal',
+	'Malayalam Lalitha' => 'mal_lalitha',
 	'Oriya' => 'ori',
 	'Tamil' => 'tam',
 	'Tamil TAB Typewriter' => 'tam_TAB',
@@ -441,7 +499,12 @@ package KeyboardNames;
     },
     'it' => {
 	'Eliminate dead keys' => 'nodeadkeys',
+	'Georgian' => 'geo',
 	'Macintosh' => 'mac',
+    },
+    'jp' => {
+	'Kana' => 'kana',
+	'OADG 109A' => 'OADG109A',
     },
     'kr' => {
 	'101/104 key Compatible' => 'kr104',
@@ -459,7 +522,10 @@ package KeyboardNames;
 	'Tamil Unicode' => 'tam_unicode',
     },
     'lt' => {
+	'Baltic+' => 'balticplus',
 	'IBM (LST 1205-92)' => 'ibm',
+	'LEKP' => 'lekp',
+	'LEKPa' => 'lekpa',
 	'Standard' => 'std',
 	'US keyboard with Lithuanian letters' => 'us',
     },
@@ -467,6 +533,24 @@ package KeyboardNames;
 	'Apostrophe () variant' => 'apostrophe',
 	'F-letter (F) variant' => 'fkey',
 	'Tilde (~) variant' => 'tilde',
+    },
+    'ma' => {
+	'French' => 'french',
+	'Tifinagh' => 'tifinagh',
+	'Tifinagh Alternative' => 'tifinagh-alt',
+	'Tifinagh Alternative Phonetic' => 'tifinagh-alt-phonetic',
+	'Tifinagh Extended' => 'tifinagh-extended',
+	'Tifinagh Extended Phonetic' => 'tifinagh-extended-phonetic',
+	'Tifinagh Phonetic' => 'tifinagh-phonetic',
+    },
+    'me' => {
+	'Cyrillic' => 'cyrillic',
+	'Cyrillic with guillemets' => 'cyrillicalternatequotes',
+	'Cyrillic, Z and ZHE swapped' => 'cyrillicyz',
+	'Latin qwerty' => 'latinyz',
+	'Latin unicode' => 'latinunicode',
+	'Latin unicode qwerty' => 'latinunicodeyz',
+	'Latin with guillemets' => 'latinalternatequotes',
     },
     'mk' => {
 	'Eliminate dead keys' => 'nodeadkeys',
@@ -481,6 +565,7 @@ package KeyboardNames;
     },
     'nl' => {
 	'Macintosh' => 'mac',
+	'Standard' => 'std',
 	'Sun dead keys' => 'sundeadkeys',
     },
     'no' => {
@@ -491,11 +576,15 @@ package KeyboardNames;
 	'Northern Saami' => 'smi',
 	'Northern Saami, eliminate dead keys' => 'smi_nodeadkeys',
     },
+    'pk' => {
+	'Arabic' => 'ara',
+    },
     'pl' => {
 	'Dvorak' => 'dvorak',
 	'Dvorak, Polish quotes on key "1/!"' => 'dvorak_altquotes',
 	'Dvorak, Polish quotes on quotemark key' => 'dvorak_quotes',
 	'Kashubian' => 'csb',
+	'Russian phonetic Dvorak' => 'ru_phonetic_dvorak',
 	'qwertz' => 'qwertz',
     },
     'pt' => {
@@ -503,19 +592,37 @@ package KeyboardNames;
 	'Macintosh' => 'mac',
 	'Macintosh, Sun dead keys' => 'mac_sundeadkeys',
 	'Macintosh, eliminate dead keys' => 'mac_nodeadkeys',
+	'Nativo' => 'nativo',
+	'Nativo for Esperanto' => 'nativo-epo',
+	'Nativo for USA keyboards' => 'nativo-us',
 	'Sun dead keys' => 'sundeadkeys',
     },
     'ro' => {
+	'Cedilla' => 'cedilla',
 	'Standard' => 'std',
+	'Standard (Cedilla)' => 'std_cedilla',
 	'Winkeys' => 'winkeys',
     },
+    'rs' => {
+	'Latin' => 'latin',
+	'Latin Unicode' => 'latinunicode',
+	'Latin Unicode qwerty' => 'latinunicodeyz',
+	'Latin qwerty' => 'latinyz',
+	'Latin with guillemets' => 'latinalternatequotes',
+	'With guillemets' => 'alternatequotes',
+	'Z and ZHE swapped' => 'yz',
+    },
     'ru' => {
-	'Ossetian' => 'os',
+	'Chuvash' => 'cv',
+	'Chuvash Latin' => 'cv_latin',
+	'Komi' => 'kom',
+	'Legacy' => 'legacy',
 	'Ossetian, Winkeys' => 'os_winkeys',
+	'Ossetian, legacy' => 'os_legacy',
 	'Phonetic' => 'phonetic',
 	'Tatar' => 'tt',
 	'Typewriter' => 'typewriter',
-	'Winkeys' => 'winkeys',
+	'Udmurt' => 'udm',
     },
     'se' => {
 	'Dvorak' => 'dvorak',
@@ -524,6 +631,7 @@ package KeyboardNames;
 	'Northern Saami' => 'smi',
 	'Russian phonetic' => 'rus',
 	'Russian phonetic, eliminate dead keys' => 'rus_nodeadkeys',
+	'Svdvorak' => 'svdvorak',
     },
     'si' => {
 	'US keyboard with Slovenian digraphs' => 'unicodeus',
@@ -550,27 +658,39 @@ package KeyboardNames;
     'tr' => {
 	'(F)' => 'f',
 	'Alt-Q' => 'alt',
+	'International (with dead keys)' => 'intl',
 	'Kurdish, (F)' => 'ku_f',
 	'Kurdish, Latin Alt-Q' => 'ku_alt',
 	'Kurdish, Latin Q' => 'ku',
 	'Sun dead keys' => 'sundeadkeys',
     },
     'ua' => {
+	'Homophonic' => 'homophonic',
 	'Phonetic' => 'phonetic',
 	'Standard RSTU' => 'rstu',
 	'Standard RSTU on Russian layout' => 'rstu_ru',
 	'Typewriter' => 'typewriter',
+	'Unicode' => 'unicode',
 	'Winkeys' => 'winkeys',
     },
     'us' => {
 	'Alternative international (former us_intl)' => 'alt-intl',
 	'Classic Dvorak' => 'dvorak-classic',
+	'Colemak' => 'colemak',
 	'Dvorak' => 'dvorak',
+	'Dvorak international' => 'dvorak-intl',
+	'Group toggle on multiply/divide key' => 'olpc2',
+	'International (AltGr dead keys)' => 'altgr-intl',
 	'International (with dead keys)' => 'intl',
 	'Left handed Dvorak' => 'dvorak-l',
 	'Macintosh' => 'mac',
+	'Programmer Dvorak' => 'dvp',
 	'Right handed Dvorak' => 'dvorak-r',
 	'Russian phonetic' => 'rus',
+	'With EuroSign on 5' => 'euro',
+    },
+    'uz' => {
+	'Latin' => 'latin',
     },
 );
 
